--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -2,21 +2,23 @@
     <div class="row">
         <div class="col-7 m-auto">
             <h1 class="text-center">Cadastro de Alunos</h1>      
-            <form>
+            <form [formGroup]="formGroupStudent">
                 <div class="form-group">
                     <label for="inputName">Nome</label>
-                    <input type="text" class="form-control" id="inputName" aria-describedby="nameHelp" placeholder="Nome completo">
+                    <input formControlName="name" type="text" class="form-control" id="inputName" aria-describedby="nameHelp" placeholder="Nome completo">
                     <small id="nameHelp" class="form-text text-muted">Digite o seu nome completo</small>
                 </div>
 
                 <div class="form-group">
                     <label for="inputCourse">Curso</label>
-                    <input type="text" class="form-control" id="inputCourse" aria-describedby="courseHelp" placeholder="Curso">
+                    <input formControlName="course" type="text" class="form-control" id="inputCourse" aria-describedby="courseHelp" placeholder="Curso" >
                     <small id="courseHelp" class="form-text text-muted">Digite o nome do curso</small>
                 </div>
 
-                <button type="submit" class="btn btn-primary">Salvar</button>
+                <button type="submit" class="btn btn-primary" (click)="save()">Salvar</button>
             </form>
+
+            
 
             <h2>Alunos Cadastrados</h2>
             
